<resources>
    <string name="app_name">Posts</string>
    <string name="delete">DELETE</string>
    <string name="textitem">textItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItemtextItem</string>
    <string name="titleitem">TitleItemTitleItemTitleItemTitleItemTitleItemTitleItem</string>
    <string name="title">%1$s : %2$s</string>
    <string name="refresh">REFRESH</string>
    <string name="send">SEND</string>
    <string name="body">body</string>
    <string name="title_hint">Title</string>
    <string name="down">DOWN</string>
</resources>